Comment added in error message

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,7 +9,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 		<main class="wrapper stack gap-8">
 			<Hero 
 				title="Page Not Found" 
-				tagline="Oops! The page you're looking for seems to have wandered off."
+				tagline="Please refresh or clear cache if you came from Practice list. Else may be you wandered off."
 			/>
 			<div class="error-content">
 				<p>Don't worry! You can:</p>
