Change 404 page title from 'Page Not Found' to 'Reload'

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero 
-				title="Page Not Found" 
+				title="Reload" 
 				tagline="Please refresh or clear cache if you came from Practice list. Else may be you wandered off."
 			/>
 			<div class="error-content">
